# atd

./: .gitignore  .merlin  .readthedocs.yaml  AUTHORS  AtdjTest.java  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  Changes.txt  INSTALL  LICENSE  META  META.atdgen  META.in  Makefile  Makefile.gh-pages  OMakefile  OMakeroot  README  README.md  TODO  TODO.md  ag_biniou.ml  ag_doc.ml  ag_doc.mli  ag_doc_lexer.mll  ag_error.ml  ag_indent.ml  ag_json.ml  ag_main.ml  ag_mapping.ml  ag_ob_emit.ml  ag_ob_mapping.ml  ag_ob_run.ml  ag_ob_spe.ml  ag_ocaml.ml  ag_oj_emit.ml  ag_oj_mapping.ml  ag_oj_run.ml  ag_ov_emit.ml  (+80 more)
atd-yamlx/examples/: Makefile  app_config.atd  config.yaml  dune  dune-project  main.ml
atdcpp/test/: .gitignore  default.atd  dune  test.atd
atdcpp/test/atd-input/: everything.atd
atdcpp/test/cpp-expected/: everything_atd.cpp  everything_atd.d  everything_atd.hpp
atdcpp/test/cpp-tests/: .gitignore  dune  everything_atd.cpp  everything_atd.hpp  test_atdd.cpp
atdd/test/: .gitignore  dune
atdd/test/atd-input/: everything.atd
atdd/test/dlang-expected/: everything.d  everything_atd.d
atdd/test/dlang-tests/: dune  test_atdd.d
atddiff/test/: Makefile  backward_incompatible_variant.expected.txt  backward_incompatible_variant_old.atd  dune  forward_incompatible_record.expected.txt  generate-dune-rules  json_repr_change_new.atd  recursive_new.atd  swapped_type_parameters_new.atd  swapped_type_parameters_old.atd  test.expected.txt  test_new.atd  test_old.atd  type_arity_change.expected.txt  type_name_change.expected.txt
atddiff/test/default/: backward_incompatible_record.expected.txt  backward_incompatible_record_if_implicit_defaults.expected.txt  backward_incompatible_record_if_implicit_defaults_new.atd  backward_incompatible_record_if_implicit_defaults_old.atd  backward_incompatible_record_new.atd  backward_incompatible_record_old.atd  backward_incompatible_variant.expected.txt  backward_incompatible_variant_new.atd  changed_renamed.expected.txt  changed_renamed_new.atd  changed_renamed_old.atd  dune  forward_incompatible_record.expected.txt  forward_incompatible_record_if_implicit_defaults.expected.txt  forward_incompatible_record_if_implicit_defaults_new.atd  forward_incompatible_record_if_implicit_defaults_old.atd  forward_incompatible_record_new.atd  forward_incompatible_record_old.atd  forward_incompatible_variant.expected.txt  forward_incompatible_variant_new.atd  forward_incompatible_variant_old.atd  ignored_type_parameters_are_ok_new.atd  ignored_type_parameters_are_ok_old.atd  json_field_name_change.expected.txt  json_field_name_change_new.atd  json_field_name_change_old.atd  json_repr_change.expected.txt  json_repr_change_old.atd  json_variant_name_change.expected.txt  json_variant_name_change_new.atd  json_variant_name_change_old.atd  recursive.expected.txt  recursive_old.atd  recursive_types_new.atd  swapped_type_parameters.expected.txt  type_arity_change.expected.txt  type_arity_change_new.atd  type_arity_change_old.atd  type_name_change.expected.txt  type_name_change_new.atd  (+6 more)
atddiff/test/filter/: dune  filter.expected.txt  filter_new.atd  filter_old.atd
atddiff/test/filter_backward/: dune  filter.expected.txt
atddiff/test/filter_forward/: dune  filter.expected.txt  filter_new.atd  filter_old.atd
atddiff/test/json_defaults/: dune
atddiff/test/json_defaults_new/: backward_incompatible_record_if_implicit_defaults.expected.txt  dune  forward_incompatible_record_if_implicit_defaults_new.atd
atddiff/test/json_defaults_old/: backward_incompatible_record_if_implicit_defaults_new.atd  backward_incompatible_record_if_implicit_defaults_old.atd  dune  forward_incompatible_record_if_implicit_defaults.expected.txt  forward_incompatible_record_if_implicit_defaults_old.atd
atddiff/test/json_output/: all_errors.expected.txt  all_errors_new.atd  all_errors_old.atd  dune
atddiff/test/no_locations_json/: dune  ordering.expected.txt  ordering_new.atd  ordering_old.atd  same_hash.expected.txt  same_hash_new.atd  same_hash_old.atd  simple.expected.txt  simple_new.atd  simple_old.atd
atddiff/test/no_locations_text/: dune  ordering.expected.txt  ordering_new.atd  ordering_old.atd  same_hash.expected.txt  same_hash_new.atd  same_hash_old.atd  simple.expected.txt
atddiff/test/safe_ignore/: dune  safe_ignore.expected.txt  safe_ignore_new.atd  safe_ignore_old.atd
atddiff/test/safe_ignore_error1/: dune  safe_ignore.expected.txt  safe_ignore_new.atd  safe_ignore_old.atd
atddiff/test/safe_ignore_error2/: dune  safe_ignore.expected.txt
atddiff/test/version/: dune
atdgen/test/bucklescript/: bucklespec.atd  bucklespec_bs.expected.ml  bucklespec_bs.expected.mli  bucklespec_j.expected.ml  bucklespec_roundtrip.ml  dune  jbuild
atdgen/test/melange/: dune  melangespec.atd  melangespec_j.expected.ml  melangespec_mel.expected.ml  melangespec_mel.expected.mli  melangespec_roundtrip.ml
atdgen/test/spec_js/: dune  jbuild  spec.atd  spec_bs.expected.json  spec_j.expected.json  spec_js.ml  spec_mel.expected.json  spec_w.expected.json  test_bs.ml  test_j.ml  test_json_annot_invalid_field.atd  test_json_annot_invalid_field.expected.stderr  test_mel.ml  test_w.ml
atdjs/test/: dune  test.atd  test.expected.js
atdml/tests/: dune  test.ml
atdml/tests/named-snapshots/: adapter  attr  builtin_types  classic_sum_types  color_enum  default_variant_fields  doc  field_prefix  imports  imports_e2e  json_repr_object  json_repr_object_sum  keyword_field_and_variant_names  mutually_recursive_types  ocaml_private_and_public_conflict  ocaml_private_public  parametric_types  polymorphic_variants  protect_builtin_constructors  records  type_aliases  type_name_json  type_name_module  type_name_t  type_name_yojson  variant_attr  wrap
atdpy/test/: dune
atdpy/test/atd-input/: everything.atd  external_defs.atd
atdpy/test/python-expected/: def_.py  everything.py  external_defs.py  if_.py
atdpy/test/python-tests/: dune  manual_sample.py  test_atdpy.py
atds/test/: AtdsTest.scala  dune  run_test.sh  test.atd  test.expected.scala
atds/test/expected/: Atds.scala  ComplexRecord.scala  (+4 more)
(+578 files in other folders)
