opam-version: "1.2"
maintainer: "martin@mjambon.com"
authors: ["Martin Jambon"]

homepage: "https://github.com/mjambon/atd"
bug-reports: "https://github.com/mjambon/atd/issues"
dev-repo: "https://github.com/mjambon/atd.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
  "atd" {>= "1.1.0"}
  "biniou" {>= "1.0.6"}
  "yojson" {>= "1.2.1" }
]
