(lang dune 3.0)

; This is a separate dune project (not part of the main atd workspace).
; It is intentionally excluded from all distributed opam packages.
; Its sole purpose is to demonstrate the use of atd-yamlx.
;
; Prerequisites (install via opam before running dune here):
;   opam install atdml atd-yamlx yojson
;
; Build and run:
;   cd atd-yamlx/examples
;   dune exec ./main.exe
