;
; We test in two phases:
;
; 1. Check that the generated Dlang code is what we expect.
;

(rule
 (alias runtest)
 (package atdcpp)
 (action
   (diff cpp-expected/everything_atd.d
    cpp-tests/everything_atd.d)))

; 2. Run the generated Dlang code and check that is reads or writes JSON
;    data as expected.
;
; See cpp-tests/dune
