;
; We test in two phases:
;
; 1. Check that the generated Dlang code is what we expect.
;

(rule
 (alias runtest)
 (package atdd)
 (action
   (diff dlang-expected/everything_atd.d
    dlang-tests/everything_atd.d)))

; 2. Run the generated Dlang code and check that is reads or writes JSON
;    data as expected.
;
; See dlang-tests/dune
