;
; Convert ATD -> Dlang
;
(rule
  (targets
    allcaps.d
    everything.d
  )
  (deps
    ../atd-input/ALLCAPS.atd
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdd} %{deps})))

;
; Typecheck and run the tests on the generated Dlang code.
;
(rule
 (alias runtest)
 (package atdd)
 (deps
  everything.d
  (glob_files *.d))
 (action
  ; TODO: update to run Dlang typechecker and unit testing
  (progn
   (run ldc2)
   ;(run python3 -m mypy --strict .)
   ;(run python3 -m pytest .)
  )))
