;
; Convert ATD -> Dlang
;
(rule
  (targets
    allcaps.d
    everything.d
  )
  (deps
    ../atd-input/ALLCAPS.atd
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdd} %{deps})))

;
; Typecheck and run the tests on the generated Dlang code.
;
(rule
 (alias runtest)
 (package atdd)
 (deps
  (glob_files *.d))
 (action
  ; TODO: ensure that compile check is run on unit tests, too
  (progn
   (run ldc2 %{deps})
  )))
