;
; Convert ATD -> Dlang
;
(rule
  (targets
    everything_atd.d
  )
  (deps
    ../atd-input/everything.atd
  )
  (action
    (run %{bin:atdd} %{deps})))

;
; Compile and run the tests on the generated Dlang code.
;
(rule
 (alias runtest)
 (package atdd)
 (deps
  (glob_files *.d))
 (action
  (progn
   (bash "ldc2 %{deps} --of test")
   (bash ./test)
  )))
