(library
 (name spec_js)
 (modules spec_t spec_j spec_js spec_bs)
 (libraries atdgen-runtime atdgen-codec-runtime biniou yojson))

(rule
 (targets spec_t.ml spec_t.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -t)))

(rule
 (targets spec_j.ml spec_j.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -j -j-std)))

(rule
 (targets spec_bs.ml spec_bs.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -bs)))

(executable
 (name test_j)
 (modules test_j)
 (libraries spec_js atdgen-runtime yojson))

(executable
 (name test_bs)
 (modules test_bs)
 (libraries spec_js atdgen-codec-runtime yojson))

(rule
 (targets spec_j.json)
 (action (with-stdout-to %{targets} (run ./test_j.exe))))

(alias
 (name runtest)
 (package atdgen)
 (action (diff spec_j.expected.json spec_j.json)))

(rule
 (targets spec_bs.json)
 (action (with-stdout-to %{targets} (run ./test_bs.exe))))

(alias
 (name runtest)
 (package atdgen)
 (action (diff spec_bs.expected.json spec_bs.json)))

(rule
 (targets test_json_annot_invalid_field.stderr)
 (deps    (:atd test_json_annot_invalid_field.atd) %{bin:atdgen})
 (action
   (with-stderr-to test_json_annot_invalid_field.stderr
   (with-stdout-to test_json_annot_invalid_field.stdout
     (bash "%{bin:atdgen} -j %{atd} || echo 'Failed succesfully!'")))))

(alias
 (name runtest)
 (package atdgen)
 (action (diff test_json_annot_invalid_field.expected.stderr test_json_annot_invalid_field.stderr)))

(alias
 (name runtest)
 (package atdgen)
 (action (diff test_json_annot_invalid_field.expected.stdout test_json_annot_invalid_field.stdout)))
