(library
 (name spec_js)
 (modules spec_t spec_j spec_js spec_mel)
 (libraries atdgen-runtime atdgen-codec-runtime biniou yojson))

(rule
 (targets spec_t.ml spec_t.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -t)))

(rule
 (targets spec_j.ml spec_j.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -j)))

(rule
 (targets spec_mel.ml spec_mel.mli)
 (deps spec.atd)
 (action (run atdgen %{deps} -mel)))

(executable
 (name test_j)
 (modules test_j)
 (libraries spec_js atdgen-runtime yojson))

(executable
 (name test_mel)
 (modules test_mel)
 (libraries spec_js atdgen-codec-runtime yojson))

(rule
 (targets spec_j.json)
 (action (with-stdout-to %{targets} (run ./test_j.exe))))

(rule
 (alias runtest)
 (package atdgen)
 (action (diff spec_j.expected.json spec_j.json)))

(rule
 (targets spec_mel.json)
 (action (with-stdout-to %{targets} (run ./test_mel.exe))))

(rule
 (alias runtest)
 (package atdgen)
 (action (diff spec_mel.expected.json spec_mel.json)))
