
(rule
 (targets
  A.java
  Atdj.java
  B.java
  ComplexRecord.java
  E.java
  Items.java
  RecordWithDefaults.java
  SampleSum.java
  Shape.java
  SimpleRecord.java
  Util.java
  package.html)
 (deps ../../../test.atd)
 (action
  (chdir
   ../../../
   (run %{bin:atdj} %{deps} -package com.mylife.test))))
